added testing firmware

--- a/testing_firmware/nintendac_mini_firmware.ioc
+++ b/testing_firmware/nintendac_mini_firmware.ioc
@@ -85,11 +85,10 @@ PB7.GPIO_Label=DUP_BUTTON
 PB7.Locked=true
 PB7.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB8.GPIO_Label=KEYPAD_COL1
-PB8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB8.GPIO_Label=J_EN
+PB8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PB8.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PB8.Locked=true
-PB8.PinState=GPIO_PIN_SET
+PB8.PinState=GPIO_PIN_RESET
 PB8.Signal=GPIO_Output
 PC13.GPIOParameters=PinState,GPIO_Label
 PC13.GPIO_Label=DEBUG_LED
