--- a/testing_firmware/switchmod_code.ioc
+++ b/testing_firmware/switchmod_code.ioc
@@ -19,28 +19,29 @@ Mcu.Name=STM32F072R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PF1-OSC_OUT
-Mcu.Pin10=PB15
-Mcu.Pin11=PC8
-Mcu.Pin12=PC9
-Mcu.Pin13=PA11
-Mcu.Pin14=PA12
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PA15
-Mcu.Pin18=PB5
-Mcu.Pin19=VP_IWDG_VS_IWDG
+Mcu.Pin10=PB14
+Mcu.Pin11=PB15
+Mcu.Pin12=PC8
+Mcu.Pin13=PC9
+Mcu.Pin14=PA11
+Mcu.Pin15=PA12
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=PA15
+Mcu.Pin19=PB5
 Mcu.Pin2=PA0
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin3=PA2
-Mcu.Pin4=PA3
-Mcu.Pin5=PA4
-Mcu.Pin6=PA5
-Mcu.Pin7=PB12
-Mcu.Pin8=PB13
-Mcu.Pin9=PB14
-Mcu.PinsNb=23
+Mcu.Pin20=VP_IWDG_VS_IWDG
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin23=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA4
+Mcu.Pin7=PA5
+Mcu.Pin8=PB12
+Mcu.Pin9=PB13
+Mcu.PinsNb=24
 Mcu.UserConstants=
 Mcu.UserName=STM32F072R8Tx
 MxCube.Version=4.19.0
@@ -53,9 +54,14 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true
 NVIC.USB_IRQn=true\:0\:0\:false\:false\:true
 PA0.GPIOParameters=GPIO_Label
-PA0.GPIO_Label=UART2_RTS_H
+PA0.GPIO_Label=FC_JC_TX_EN
 PA0.Locked=true
 PA0.Signal=GPIO_Input
+PA1.GPIOParameters=PinState,GPIO_Label
+PA1.GPIO_Label=FC_NS_TX_EN
+PA1.Locked=true
+PA1.PinState=GPIO_PIN_SET
+PA1.Signal=GPIO_Output
 PA11.Mode=Device
 PA11.Signal=USB_DM
 PA12.Mode=Device
