implemented high speed serial transfer

--- a/testing_firmware/switchmod_code.ioc
+++ b/testing_firmware/switchmod_code.ioc
@@ -52,7 +52,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true
-NVIC.USB_IRQn=true\:0\:0\:false\:false\:true
+NVIC.USB_IRQn=true\:1\:0\:true\:false\:true
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=FC_JC_TX_EN
 PA0.Locked=true
